Fix bug where white sliver is visible on bottom of page while in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ body {
   overflow: hidden;
 }
 
+body:has(.App.dark-mode) {
+  background-color: #18181b;
+}
+
 body * {
   touch-action: pan-x pan-y;
 }
